<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:text="@string/your_current_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvCurrentBet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/raise_to" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <NumberPicker
            android:id="@+id/npRaise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity = "center" />
        <TextView
            android:text="."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity = "center" />
        <NumberPicker
            android:id="@+id/npRaiseFraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity = "center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRaise"
        android:text="@string/raise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>